# LegoIsleN64

./: .gitignore  CMakeLists.txt  README.md
CONFIG/: config.cpp  config.h
ISLE/: MockRegistry.h  isleapp.cpp
LEGO1/: main.cpp  utils.h
LEGO1/lego/legoomni/include/: act2actor.h  act3ammo.h  bike.h  carrace.h  dunebuggy.h  gasstation.h  helicopter.h  infocenter.h  jukebox.h  lego3dsound.h  lego3dwavepresenter.h  legoactioncontrolpresenter.h  legoactor.h  legoactorpresenter.h  legoanimactor.h  legobuildingmanager.h  legocachesoundlist.h  legocachesoundmanager.h  legocachsound.h  legocarbuildpresenter.h  legocharactermanager.h  legoendanimnotificationparam.h  legoentitypresenter.h  legoflctexturepresenter.h  legohideanimpresenter.h  legoinputmanager.h  legoloadcachesoundpresenter.h  legoloopinganimpresenter.h  legomain.h  legomodelpresenter.h  legonavcontroller.h  legopalettepresenter.h  legopathboundary.h  legopathcontroller.h  legopathedgecontainer.h  legopathpresenter.h  legopathstruct.h  legophoneme.h  legophonemelist.h  legophonemepresenter.h  (+15 more)
LEGO1/lego/sources/3dmanager/: lego3dmanager.cpp  lego3dmanager.h  lego3dview.cpp  lego3dview.h  legoview1.cpp  legoview1.h  tglsurface.cpp
LEGO1/lego/sources/anim/: legoanim.cpp  legoanim.h
LEGO1/lego/sources/geom/: legoedge.cpp  legounkown100db7f4.cpp  legoweedge.cpp  legoweedge.h  legowegedge.cpp  legowegedge.h
LEGO1/lego/sources/misc/: legocontainer.cpp  legocontainer.h  legoimage.cpp  legostorage.cpp  legotexture.cpp  legotree.cpp  legotree.h  legounknown.cpp
LEGO1/lego/sources/roi/: legolod.cpp  legoroi.cpp
LEGO1/lego/sources/shape/: legobox.cpp  legocolor.cpp  legomesh.cpp  legomesh.h  legosphere.cpp  legovertex.cpp
LEGO1/modeldb/: modeldb.cpp  modeldb.h
LEGO1/mxdirectx/: mxdirect3d.cpp  mxdirectdraw.cpp  mxdirectxinfo.cpp  mxdirectxinfo.h
LEGO1/mxgeometry/: mxgeometry3d.h  mxgeometry4d.h  mxquaternion.h
LEGO1/omni/include/: mxactionnotificationparam.h  mxatom.h  mxaudiomanager.h  mxaudiopresenter.h  mxbitset.h  mxdebug.h  mxdiskstreamcontroller.h  mxdiskstreamprovider.h  mxdsaction.h  mxdsactionlist.h  mxdschunk.h  mxdsobject.h  mxdsselectaction.h  mxdssubscriber.h  mxentity.h  mxeventpresenter.h  mxflcpresenter.h  mxlist.h  mxloopingflcpresenter.h  mxloopingsmkpresenter.h  mxmediapresenter.h  mxmemorypool.h  mxmidipresenter.h  mxmusicmanager.h  mxnextactiondatastart.h  mxnotificationparam.h  mxomnicreateparam.h  mxpoint32.h  mxpresenter.h  mxpresenterlist.h  mxqueue.h  mxramstreamcontroller.h  mxregion.h  mxsmk.h  mxsmkpresenter.h  mxsoundmanager.h  mxstillpresenter.h  mxstreamchunklist.h  mxstreamer.h  mxstreamprovider.h  (+5 more)
LEGO1/omni/src/action/: mxdsaction.cpp  mxdsanim.cpp  mxdsevent.cpp  mxdsmediaaction.cpp  mxdsmultiaction.cpp  mxdsobject.cpp  mxdsobjectaction.cpp  mxdsparallelaction.cpp  mxdsselectaction.cpp  mxdsserialaction.cpp  mxdssound.cpp  mxdsstill.cpp  mxdsstreamingaction.cpp
LEGO1/omni/src/audio/: mxaudiomanager.cpp  mxaudiopresenter.cpp  mxloopingmidipresenter.cpp  mxmidipresenter.cpp  mxmusicmanager.cpp  mxmusicpresenter.cpp  mxsoundmanager.cpp  mxsoundpresenter.cpp  mxwavepresenter.cpp
LEGO1/omni/src/common/: mxatom.cpp  mxcompositepresenter.cpp  mxmediamanager.cpp  mxmediapresenter.cpp  mxmisc.cpp  mxobjectfactory.cpp  mxpresenter.cpp  mxstring.cpp  mxticklemanager.cpp  mxtimer.cpp  mxutilities.cpp  mxvariable.cpp  mxvariabletable.cpp
LEGO1/omni/src/entity/: mxentity.cpp
LEGO1/omni/src/event/: mxeventmanager.cpp  mxeventpresenter.cpp
LEGO1/omni/src/main/: mxomni.cpp  mxomnicreateflags.cpp  mxomnicreateparam.cpp
LEGO1/omni/src/notify/: mxactionnotificationparam.cpp  mxnotificationmanager.cpp  mxnotificationparam.cpp
LEGO1/omni/src/stream/: mxdiskstreamcontroller.cpp  mxdiskstreamprovider.cpp  mxdsbuffer.cpp  mxdschunk.cpp  mxdsfile.cpp  mxdssubscriber.cpp  mxio.cpp  mxramstreamcontroller.cpp  mxramstreamprovider.cpp  mxstreamcontroller.cpp  mxstreamer.cpp
LEGO1/omni/src/system/: mxcriticalsection.cpp  mxscheduler.cpp  mxsemaphore.cpp  mxthread.cpp  mxticklethread.cpp
LEGO1/omni/src/video/: flic.cpp  mxbitmap.cpp  mxdisplaysurface.cpp  mxflcpresenter.cpp  mxloopingflcpresenter.cpp  mxloopingsmkpresenter.cpp  mxpalette.cpp  mxregion.cpp  mxregioncursor.cpp  mxsmk.cpp  mxsmkpresenter.cpp  mxstillpresenter.cpp  mxvideomanager.cpp  mxvideoparam.cpp  mxvideoparamflags.cpp  mxvideopresenter.cpp
LEGO1/realtime/: orientableroi.cpp  orientableroi.h  realtime.cpp  realtimeview.cpp  roi.h  vector.h  vector2d.inl.h  vector3d.inl.h  vector4d.inl.h
LEGO1/tgl/: tglvector.h
LEGO1/tgl/d3drm/: camera.cpp  device.cpp  group.cpp  impl.h  light.cpp  mesh.cpp  meshbuilder.cpp  texture.cpp  view.cpp
LEGO1/viewmanager/: viewlod.h  viewlodlist.cpp  viewlodlist.h  viewmanager.cpp  viewroi.cpp  viewroi.h
isle/: MockRegistry.cpp  isleapp.cpp
lego1/lego/legoomni/include/: act3.h  ambulance.h  elevatorbottom.h  historybook.h  hospital.h  isle.h  islepathactor.h  jetski.h  jetskirace.h  (+38 more)
lego1/modeldb/: modeldb.h
lego1/mxdirectx/: legodxinfo.cpp  mxdirect3d.cpp  mxdirect3d.h  mxdirectdraw.cpp  mxstopwatch.h
lego1/mxgeometry/: mxgeometry3d.h  mxgeometry4d.h
lego1/mxstl/: mxstl.h  stlcompat.h
lego1/omni/include/: flic.h  mxatom.h  mxbitmap.h  mxcollection.h  mxcompositepresenter.h  mxcore.h  mxdebug.h  mxdisplaysurface.h  mxdsbuffer.h  mxdsmediaaction.h  mxdsserialaction.h  mxdssource.h  mxentity.h  mxeventmanager.h  mxflcpresenter.h  mxhashtable.h  mxloopingflcpresenter.h  mxloopingmidipresenter.h  mxloopingsmkpresenter.h  mxmemorypool.h  mxmusicpresenter.h  mxrect32.h  mxregionlist.h  mxsize32.h  mxsmkpresenter.h  mxsoundpresenter.h  mxstreamchunklist.h  mxstreamcontroller.h  mxstreamer.h  mxstreamprovider.h  mxthread.h  mxtimer.h  mxutilities.h  mxutilitylist.h  mxvideoparamflags.h  mxwavepresenter.h
lego1/realtime/: lodlist.h  matrix.h  matrix4d.inl.h  orientableroi.h
lego1/tgl/: tgl.h
lego1/tgl/d3drm/: camera.cpp  light.cpp  meshbuilder.cpp  renderer.cpp
lego1/viewmanager/: viewlod.cpp  viewlodlist.cpp  viewlodlist.h  viewmanager.cpp  viewmanager.h  viewroi.h
util/: compat.h
(+232 files in other folders)
